# tello-skills

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
docs/superpowers/: Tello_SDK_3.0_User_Guide_cn.md
docs/superpowers/plans/: 2026-05-18-tello-skill-implementation.md  2026-05-19-tello-refactor-plan.md  2026-05-21-tello-controller-refactor-plan.md  2026-05-22-camera-preview-plan.md  2026-05-26-heartbeat-skillmd-fixes-plan.md  2026-05-27-cleanup-preview-plan.md  2026-05-27-vision-record-fix.md  2026-05-28-task-follow-fix.md  2026-05-30-tof-distance-display.md
docs/superpowers/specs/: 2026-05-18-tello-skill-design.md  2026-05-19-tello-refactor-design.md  2026-05-21-tello-controller-refactor-design.md  2026-05-22-camera-preview-design.md  2026-05-26-heartbeat-skillmd-fixes-design.md  2026-05-27-cleanup-preview-design.md  2026-05-27-vision-record-fix-design.md  2026-05-28-task-follow-fix-design.md  2026-05-30-tof-distance-display-design.md
evals/: evals.json
scripts/: __init__.py  _client.py  controller.py  flight.py  led.py  matrix.py  mission_pad.py  sensor.py  vision.py  yolo.py
scripts/tasks/: task_follow.py  task_search_pad.py
